src/output/snapshots/pg_migration_lint__output__sarif__tests__line_numbers_are_correct.snap
---
source: src/output/sarif.rs
assertion_line: 463
expression: parsed
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "a.sql"
                },
                "region": {
                  "endLine": 7,
                  "startLine": 7
                }
              }
            }
          ],
          "message": {
            "text": "single line"
          },
          "ruleId": "PGM001"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "b.sql"
                },
                "region": {
                  "endLine": 20,
                  "startLine": 15
                }
              }
            }
          ],
          "message": {
            "text": "multi line"
          },
          "ruleId": "PGM003"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "c.sql"
                },
                "region": {
                  "endLine": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "line 1"
          },
          "ruleId": "PGM004"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/robert-sjoblom/pg-migration-lint",
          "name": "pg-migration-lint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "PGM001",
              "shortDescription": {
                "text": "single line"
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "PGM003",
              "shortDescription": {
                "text": "multi line"
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "PGM004",
              "shortDescription": {
                "text": "line 1"
              }
            }
          ],
          "version": "[version]"
        }
      }
    }
  ],
  "version": "2.1.0"
}
