src/output/snapshots/pg_migration_lint__output__sarif__tests__multi_file_findings_reference_correct_paths.snap
---
source: src/output/sarif.rs
expression: parsed
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/migrations/V001__create_tables.sql"
                },
                "region": {
                  "endLine": 5,
                  "startLine": 5
                }
              }
            }
          ],
          "message": {
            "text": "index issue in file A"
          },
          "ruleId": "PGM001"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/migrations/V002__add_fk.sql"
                },
                "region": {
                  "endLine": 12,
                  "startLine": 10
                }
              }
            }
          ],
          "message": {
            "text": "missing FK index in file B"
          },
          "ruleId": "PGM501"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/changelog/003_audit.sql"
                },
                "region": {
                  "endLine": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "no primary key in file C"
          },
          "ruleId": "PGM502"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/robert-sjoblom/pg-migration-lint",
          "name": "pg-migration-lint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "PGM001",
              "shortDescription": {
                "text": "index issue in file A"
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "PGM501",
              "shortDescription": {
                "text": "missing FK index in file B"
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "PGM502",
              "shortDescription": {
                "text": "no primary key in file C"
              }
            }
          ],
          "version": "[version]"
        }
      }
    }
  ],
  "version": "2.1.0"
}
