src/output/snapshots/pg_migration_lint__output__sarif__tests__round_trip_sarif_all_fields_verified.snap
---
source: src/output/sarif.rs
expression: parsed
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/migrations/V042__add_index.sql"
                },
                "region": {
                  "endLine": 3,
                  "startLine": 3
                }
              }
            }
          ],
          "message": {
            "text": "CREATE INDEX on 'orders' should use CONCURRENTLY."
          },
          "ruleId": "PGM001"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/migrations/V043__add_fk.sql"
                },
                "region": {
                  "endLine": 12,
                  "startLine": 10
                }
              }
            }
          ],
          "message": {
            "text": "FK on 'orders.customer_id' has no covering index."
          },
          "ruleId": "PGM501"
        },
        {
          "level": "note",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/migrations/V042__add_index.sql"
                },
                "region": {
                  "endLine": 20,
                  "startLine": 20
                }
              }
            }
          ],
          "message": {
            "text": "Table 'events' has UNIQUE NOT NULL but no PRIMARY KEY."
          },
          "ruleId": "PGM503"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/robert-sjoblom/pg-migration-lint",
          "name": "pg-migration-lint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "PGM001",
              "shortDescription": {
                "text": "CREATE INDEX on 'orders' should use CONCURRENTLY."
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "PGM501",
              "shortDescription": {
                "text": "FK on 'orders.customer_id' has no covering index."
              }
            },
            {
              "defaultConfiguration": {
                "level": "note"
              },
              "id": "PGM503",
              "shortDescription": {
                "text": "Table 'events' has UNIQUE NOT NULL but no PRIMARY KEY."
              }
            }
          ],
          "version": "[version]"
        }
      }
    }
  ],
  "version": "2.1.0"
}
