src/output/snapshots/pg_migration_lint__output__sarif__tests__single_finding_produces_valid_sarif.snap
---
source: src/output/sarif.rs
assertion_line: 229
expression: parsed
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "db/migrations/V042__add_index.sql"
                },
                "region": {
                  "endLine": 3,
                  "startLine": 3
                }
              }
            }
          ],
          "message": {
            "text": "CREATE INDEX on existing table 'orders' should use CONCURRENTLY."
          },
          "ruleId": "PGM001"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/robert-sjoblom/pg-migration-lint",
          "name": "pg-migration-lint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "PGM001",
              "shortDescription": {
                "text": "CREATE INDEX on existing table 'orders' should use CONCURRENTLY."
              }
            }
          ],
          "version": "[version]"
        }
      }
    }
  ],
  "version": "2.1.0"
}
