src/output/snapshots/pg_migration_lint__output__sarif__tests__unique_rules_appear_in_driver_rules.snap
---
source: src/output/sarif.rs
expression: parsed
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "a.sql"
                },
                "region": {
                  "endLine": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "first"
          },
          "ruleId": "PGM001"
        },
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "b.sql"
                },
                "region": {
                  "endLine": 2,
                  "startLine": 2
                }
              }
            }
          ],
          "message": {
            "text": "second"
          },
          "ruleId": "PGM001"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "c.sql"
                },
                "region": {
                  "endLine": 3,
                  "startLine": 3
                }
              }
            }
          ],
          "message": {
            "text": "third"
          },
          "ruleId": "PGM501"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/robert-sjoblom/pg-migration-lint",
          "name": "pg-migration-lint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "PGM001",
              "shortDescription": {
                "text": "first"
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "PGM501",
              "shortDescription": {
                "text": "third"
              }
            }
          ],
          "version": "[version]"
        }
      }
    }
  ],
  "version": "2.1.0"
}
